# inspection_ai_pilot

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
data/standards/: concrete_jgj23.md
scripts/: build_db.py  download_model.py
src/: config.py
src/core/: agent.py  prompts.py  tools.py
src/services/: mock_api.py  rag_service.py
tests/llm/: test_chatglm.py
